<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".xmllayout.AddNoteXMLActivity">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:hint="@string/title"
        android:maxLines="1"
        android:padding="12sp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titleEditText"
        android:layout_marginTop="12dp"
        android:background="@drawable/border"
        android:gravity="top"
        android:hint="@string/description"
        android:padding="12dp"
        android:textSize="18sp" />

</RelativeLayout>