<resources>
    <string name="app_name">My Notes</string>
    <string name="title_activity_login_jetpack_compose">LoginJetpackComposeActivity</string>
    <string name="title_activity_login_xmlactivity">LoginXMLActivity</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_or_password_does_not_match">Username or password does not match</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="my_notes">My Notes</string>
</resources>